# CaptainsLog

./: .gitignore  README.md  captainsLogs.json  captainsLogsold.json  icon.icns  index.js  package-lock.json  package.json  plugin-loader.js  preload.js  sampleLogs.json  settingsPreload.js  setupPreload.js  store.js  tutorialPreload.js
.github/workflows/: release.yml
plugins/: calculator.plugin.html  converter.plugin.html  notes.plugin.html  pomodoro.plugin.html  regex.plugin.html  settings.plugin.html  timestamp.plugin.html  transform.plugin.html  uuid.plugin.html  whisper.plugin.html
public/: index.html  recording-status.html  renderer.js  settings.css  settings.html  settings.js  setup.css  setup.html  setup.js  shell.css  shell.js  styles.css  tauri-api.js  tutorial.css  tutorial.html  tutorial.js
public/renderer/: model.js  pomodoro.js  state.js  view.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diagnostics.rs  lib.rs  main.rs  notes.rs  plugins.rs  state.rs  whisper.rs  windows.rs
