[package]
name = "captainslog"
version = "1.0.0"
description = "An out of the way app for quickly logging ideas"
authors = ["Max Vinten"]
edition = "2021"

[lib]
name = "captainslog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "captainslog"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
dirs = "5"
hound = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
